<resources>
    <string name="app_name">FinalAndroidAssignment</string>
    <string name="welcome_info">Welcome, please enter your info</string>
    <string name="welcome">Check out these beautiful destinations</string>
    <string name="title_activity_maps" translatable="false">MapsActivity</string>
    <string name="See_more">See more</string>
    <string name="log_out">Log out</string>
    <string name="read">Read</string>
    <string name="voice_command">Voice command</string>
    <string name="email">Email...</string>
    <string name="password">Password...</string>
    <string name="log_in">Log in</string>
    <string name="register">Register</string>
    <string name="go_back">Go back</string>
    <string name="show_in_map">Show in map</string>
</resources>